--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <img src="https://png.pngtree.com/png-clipart/20230213/ourmid/pngtree-colorful-diwali-diya-concept-png-image_6596176.png" alt="Diya Lamp" class="diya">
         <img src="https://png.pngtree.com/png-clipart/20230213/ourmid/pngtree-colorful-diwali-diya-concept-png-image_6596176.png" alt="Diya Lamp" class="diya">
         <img src="https://png.pngtree.com/png-clipart/20230213/ourmid/pngtree-colorful-diwali-diya-concept-png-image_6596176.png" alt="Diya Lamp" class="diya">
-        <img src="https://png.pngtree.com/png-clipart/20230213/ourmid/pngtree-colorful-diwali-diya-concept-png-image_6596176.png" alt="Diya Lamp" class="diya">
+       
+       <!-- <img src="https://media0.giphy.com/media/yIlQse7LgTpJ4yvaKq/giphy.gif?cid=6c09b952zw11irkabv9992zw010sfbmzuj46di98clhsuixi&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g" alt=""> <img src="https://png.pngtree.com/png-clipart/20230213/ourmid/pngtree-colorful-diwali-diya-concept-png-image_6596176.png" alt="Diya Lamp" class="diya"> -->
       </div>
     <!-- Bomb Section for Sound Effect -->
     <div class="bomb-section">
