--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
+   <audio src="bgsong.mp3" id="backgroundMusic" loop autoplay></audio>
   <div class="container">
     <h1>✨ Happy Diwali! ✨</h1>
     <p class="ok">May your Diwali be bright and prosperous!</p>
