--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-   <audio src="bgsong.mp3" id="backgroundMusic" loop autoplay></audio>
+   <!-- <audio src="bgsong.mp3" id="backgroundMusic" loop></audio> -->
+   <!-- <audio src="bgsong.mp3" id="backgroundMusic" loop></audio>
+     -->
+    
+     
   <div class="container">
+    <audio src="bgsong.mp3" id="backgroundMusic" ></audio>
+    <div class="music-icon" id="musicIcon"></div>
     <h1>✨ Happy Diwali! ✨</h1>
     <p class="ok">May your Diwali be bright and prosperous!</p>
 
